syntax = "proto3";

package user_def.v1;

enum StatusVisibility {
  STATUS_VISIBILITY_UNSPECIFIED /**/ = 0;
  STATUS_VISIBILITY_GLOBAL /*     */ = 1;
  STATUS_VISIBILITY_FOLLOWERS /*  */ = 2;
  STATUS_VISIBILITY_FRIENDS /*    */ = 3;
}

message Status {
  optional string emoji /*      */ = 1;
  optional string text /*       */ = 2;
  optional string expires_at /* */ = 3;
  StatusVisibility visibility /**/ = 4;
}

// User

message User {
  string id /*                       */ = 1;
  string name /*                     */ = 2;
  string username /*                 */ = 3;
  string bio /*                      */ = 4;
  optional string avatar_id /*       */ = 5;
  optional string avatar_hex /*      */ = 6;
  optional string banner_id /*       */ = 7;
  optional string banner_hex /*      */ = 8;
  uint64 public_flags /*             */ = 9;
  uint32 wpm /*                      */ = 10;
  bool is_private /*                 */ = 11;
  string location /*                 */ = 12;
  string created_at /*               */ = 13;
  uint32 follower_count /*           */ = 14;
  // User specific props
  optional bool is_self /*           */ = 15;
  optional bool is_following /*      */ = 16;
  optional bool is_follower /*       */ = 17;
  optional bool is_friend /*         */ = 18;
  optional bool is_blocked_by_user /**/ = 19;
}

// Get user ID

message GetUserIdRequest {
  string token = 1; // Token from the session cookie
}

message GetUserIdResponse {
  string id = 1;
}

// Get user relations info

message GetUserRelationsInfoRequest {
  string id = 1;
}

message GetUserRelationsInfoResponse {
  uint32 follower_count /*              */ = 1;
  uint32 following_count /*             */ = 2;
  uint32 friend_count /*                */ = 3;
  uint32 pending_friend_request_count /**/ = 4;
}

// Get user blocks count

message GetUserBlockCountRequest {
  string id = 1;
}

message GetUserBlockCountResponse {
  uint32 block_count = 1;
}

// Get user mutes count

message GetUserMuteCountRequest {
  string id = 1;
}

message GetUserMuteCountResponse {
  uint32 mute_count = 1;
}
